@@ -22,7 +22,8 @@ tasks.withType(JavaCompile) {
 
 application {
     applicationDefaultJvmArgs = ["-DLOG4J_SKIP_JANSI=false"]
-    mainClass = 'de.pedigreeProject.Start'
+    mainClass = 'de.pedigreeProject.MainApp'
+    mainModule = 'pedigree.main'
 }
 
 javafx {
@@ -63,9 +64,34 @@ distributions {
     }
 }
 
+//jlink plugin settings
+jlink {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher{
+        name = "PedigreeProject"
+//        name = "pedigree.main"
+//        name = "$moduleName"
+    }
+    forceMerge('log4j-api')
+    jpackage {
+        if (org.gradle.internal.os.OperatingSystem.current().windows) {
+            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+            imageOptions += ['--win-console']
+        }
+    }
+}
 test {
     useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+    //Options for TestFX
+    jvmArgs = [
+            '--add-opens', "pedigree.main/de.pedigreeProject=org.testfx.junit5",
+//            '--add-opens', "$moduleName/de.pedigreeProject=org.testfx.junit5",
+            '--add-opens', 'javafx.graphics/com.sun.javafx.application=org.testfx',
+            '--add-opens', 'javafx.controls/com.sun.javafx.application=org.testfx',
+            '--add-opens', 'javafx.controls/com.sun.javafx.scene.control=org.testfx'
+    ]
 }
-
-
 
